@@ -22,18 +22,15 @@
  * CA 95054 USA or visit www.sun.com if you need additional information or
  * have any questions.
  */
-
 package java.beans;
 
 import java.io.Serializable;
+import java.io.ObjectStreamField;
 import java.io.ObjectOutputStream;
 import java.io.ObjectInputStream;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-
+import java.util.Hashtable;
+import java.util.Map.Entry;
 
 /**
  * This is a utility class that can be used by beans that support constrained
@@ -44,15 +41,14 @@ import java.util.List;
  * (and restore) any listeners that are themselves serializable.  Any
  * non-serializable listeners will be skipped during serialization.
  */
-
-public class VetoableChangeSupport implements java.io.Serializable {
+public class VetoableChangeSupport implements Serializable {
+    private VetoableChangeListenerMap map = new VetoableChangeListenerMap();
 
     /**
      * Constructs a <code>VetoableChangeSupport</code> object.
      *
      * @param sourceBean  The bean to be given as the source for any events.
      */
-
     public VetoableChangeSupport(Object sourceBean) {
 	if (sourceBean == null) {
 	    throw new NullPointerException();
@@ -61,7 +57,7 @@ public class VetoableChangeSupport implements java.io.Serializable {
     }
 
     /**
-     * Add a VetoableListener to the listener list.
+     * Add a VetoableChangeListener to the listener list.
      * The listener is registered for all properties.
      * The same listener object may be added more than once, and will be called
      * as many times as it is added.
@@ -70,9 +66,7 @@ public class VetoableChangeSupport implements java.io.Serializable {
      *
      * @param listener  The VetoableChangeListener to be added
      */
-
-    public synchronized void addVetoableChangeListener(
-					VetoableChangeListener listener) {
+    public void addVetoableChangeListener(VetoableChangeListener listener) {
         if (listener == null) {
             return;
         }
@@ -83,10 +77,7 @@ public class VetoableChangeSupport implements java.io.Serializable {
             addVetoableChangeListener(proxy.getPropertyName(),
                     (VetoableChangeListener)proxy.getListener());
         } else {
-            if (listeners == null) {
-                listeners = new java.util.Vector();
-            }
-            listeners.addElement(listener);
+            this.map.add(null, listener);
         }
     }
 
@@ -101,8 +92,7 @@ public class VetoableChangeSupport implements java.io.Serializable {
      *
      * @param listener  The VetoableChangeListener to be removed
      */
-    public synchronized void removeVetoableChangeListener(
-					VetoableChangeListener listener) {
+    public void removeVetoableChangeListener(VetoableChangeListener listener) {
         if (listener == null) {
             return;
         }
@@ -113,10 +103,7 @@ public class VetoableChangeSupport implements java.io.Serializable {
             removeVetoableChangeListener(proxy.getPropertyName(),
                     (VetoableChangeListener)proxy.getListener());
         } else {
-            if (listeners == null) {
-                return;
-            }
-            listeners.removeElement(listener);
+            this.map.remove(null, listener);
         }
     }
 
@@ -128,32 +115,8 @@ public class VetoableChangeSupport implements java.io.Serializable {
      *         if named property change listeners were added.
      * @since 1.4
      */
-    public synchronized VetoableChangeListener[] getVetoableChangeListeners(){
-        List returnList = new ArrayList();
-
-        // Add all the VetoableChangeListeners
-        if (listeners != null) {
-            returnList.addAll(listeners);
-        }
-
-        // Add all the VetoableChangeListenerProxys
-        if (children != null) {
-            Iterator iterator = children.keySet().iterator();
-            while (iterator.hasNext()) {
-                String key = (String)iterator.next();
-                VetoableChangeSupport child =
-                        (VetoableChangeSupport)children.get(key);
-                VetoableChangeListener[] childListeners =
-                    child.getVetoableChangeListeners();
-                for (int index = childListeners.length - 1; index >= 0;
-                        index--) {
-                    returnList.add(new VetoableChangeListenerProxy(
-                            key, childListeners[index]));
-                }
-            }
-        }
-	return (VetoableChangeListener[])(returnList.toArray(
-                new VetoableChangeListener[0]));
+    public VetoableChangeListener[] getVetoableChangeListeners(){
+        return this.map.getListeners();
     }
 
     /**
@@ -169,22 +132,16 @@ public class VetoableChangeSupport implements java.io.Serializable {
      * @param propertyName  The name of the property to listen on.
      * @param listener  The VetoableChangeListener to be added
      */
-
-    public synchronized void addVetoableChangeListener(
+    public void addVetoableChangeListener(
 				String propertyName,
                 VetoableChangeListener listener) {
         if (listener == null || propertyName == null) {
             return;
         }
-        if (children == null) {
-            children = new java.util.Hashtable();
+        listener = this.map.extract(listener);
+        if (listener != null) {
+            this.map.add(propertyName, listener);
         }
-        VetoableChangeSupport child = (VetoableChangeSupport)children.get(propertyName);
-        if (child == null) {
-            child = new VetoableChangeSupport(source);
-            children.put(propertyName, child);
-        }
-        child.addVetoableChangeListener(listener);
     }
 
     /**
@@ -200,21 +157,16 @@ public class VetoableChangeSupport implements java.io.Serializable {
      * @param propertyName  The name of the property that was listened on.
      * @param listener  The VetoableChangeListener to be removed
      */
-
-    public synchronized void removeVetoableChangeListener(
+    public void removeVetoableChangeListener(
 				String propertyName,
                 VetoableChangeListener listener) {
         if (listener == null || propertyName == null) {
             return;
         }
-        if (children == null) {
-            return;
+        listener = this.map.extract(listener);
+        if (listener != null) {
+            this.map.remove(propertyName, listener);
         }
-        VetoableChangeSupport child = (VetoableChangeSupport)children.get(propertyName);
-        if (child == null) {
-            return;
-        }
-        child.removeVetoableChangeListener(listener);
     }
 
     /**
@@ -228,20 +180,8 @@ public class VetoableChangeSupport implements java.io.Serializable {
      *         returned.
      * @since 1.4
      */
-    public synchronized VetoableChangeListener[] getVetoableChangeListeners(
-            String propertyName) {
-        List returnList = new ArrayList();
-
-        if (children != null && propertyName != null) {
-            VetoableChangeSupport support =
-                    (VetoableChangeSupport)children.get(propertyName);
-            if (support != null) {
-                returnList.addAll(
-                        Arrays.asList(support.getVetoableChangeListeners()));
-            }
-        }
-        return (VetoableChangeListener[])(returnList.toArray(new
-                VetoableChangeListener[0]));
+    public VetoableChangeListener[] getVetoableChangeListeners(String propertyName) {
+        return this.map.getListeners(propertyName);
     }
 
     /**
@@ -261,10 +201,9 @@ public class VetoableChangeSupport implements java.io.Serializable {
     public void fireVetoableChange(String propertyName, 
 					Object oldValue, Object newValue)
 					throws PropertyVetoException {
-	if (listeners == null && children == null) {
+        if (oldValue != null && newValue != null && oldValue.equals(newValue)) {
 	    return;
 	}
-
        	PropertyChangeEvent evt = new PropertyChangeEvent(source, propertyName,
 							    oldValue, newValue);
 	fireVetoableChange(evt);
@@ -288,7 +227,7 @@ public class VetoableChangeSupport implements java.io.Serializable {
 	if (oldValue == newValue) {
 	    return;
 	}
-	fireVetoableChange(propertyName, new Integer(oldValue), new Integer(newValue));
+        fireVetoableChange(propertyName, Integer.valueOf(oldValue), Integer.valueOf(newValue));
     }
 
     /**
@@ -312,7 +251,6 @@ public class VetoableChangeSupport implements java.io.Serializable {
 	fireVetoableChange(propertyName, Boolean.valueOf(oldValue), Boolean.valueOf(newValue));
     }
 
-
     /**
      * Fire a vetoable property update to any registered listeners.  If
      * anyone vetos the change, then fire a new event reverting everyone to 
@@ -333,33 +271,31 @@ public class VetoableChangeSupport implements java.io.Serializable {
 	if (oldValue != null && newValue != null && oldValue.equals(newValue)) {
 	    return;
 	}
-
-	java.util.Vector targets = null;
-	VetoableChangeSupport child = null;
-	synchronized (this) {
-	    if (listeners != null) {
-	        targets = (java.util.Vector) listeners.clone();
-	    }
-	    if (children != null && propertyName != null) {
-		child = (VetoableChangeSupport)children.get(propertyName);
-	    }
+        VetoableChangeListener[] common = this.map.get(null);
+        VetoableChangeListener[] named = (propertyName != null)
+                    ? this.map.get(propertyName)
+                    : null;
+        fire(common, evt);
+        fire(named, evt);
 	}
 
+    private void fire(VetoableChangeListener[] listeners, PropertyChangeEvent event) throws PropertyVetoException {
 	if (listeners != null) {
+            VetoableChangeListener current = null;
 	    try {
-	        for (int i = 0; i < targets.size(); i++) {
-	            VetoableChangeListener target = 
-				(VetoableChangeListener)targets.elementAt(i);
-	            target.vetoableChange(evt);
+                for (VetoableChangeListener listener : listeners) {
+                    current = listener;
+                    listener.vetoableChange(event);
 	        }
 	    } catch (PropertyVetoException veto) {
 	        // Create an event to revert everyone to the old value.
-       	        evt = new PropertyChangeEvent(source, propertyName, newValue, oldValue);
-	        for (int i = 0; i < targets.size(); i++) {
+                event = new PropertyChangeEvent( this.source,
+                                                 event.getPropertyName(),
+                                                 event.getNewValue(),
+                                                 event.getOldValue() );
+                for (VetoableChangeListener listener : listeners) {
 		    try {
-	                VetoableChangeListener target =
-				(VetoableChangeListener)targets.elementAt(i);
-	                target.vetoableChange(evt);
+                        listener.vetoableChange(event);
 		    } catch (PropertyVetoException ex) {
 		         // We just ignore exceptions that occur during reversions.
 		    }
@@ -368,12 +304,7 @@ public class VetoableChangeSupport implements java.io.Serializable {
 	        throw veto;
 	    }
 	}
-
-	if (child != null) {
-	    child.fireVetoableChange(evt);
-	}
     }
-
 
     /**
      * Check if there are any listeners for a specific property, including
@@ -383,18 +314,8 @@ public class VetoableChangeSupport implements java.io.Serializable {
      * @param propertyName  the property name.
      * @return true if there are one or more listeners for the given property
      */
-    public synchronized boolean hasListeners(String propertyName) {
-	if (listeners != null && !listeners.isEmpty()) {
-	    // there is a generic listener
-	    return true;
-	}
-	if (children != null && propertyName != null) {
-	    VetoableChangeSupport child = (VetoableChangeSupport)children.get(propertyName);
-	    if (child != null && child.listeners != null) {
-		return !child.listeners.isEmpty();
-	    }
-	}
-	return false;
+    public boolean hasListeners(String propertyName) {
+        return this.map.hasListeners(propertyName);
     }
 
     /**
@@ -402,22 +323,33 @@ public class VetoableChangeSupport implements java.io.Serializable {
      * <p>
      * At serialization time we skip non-serializable listeners and
      * only serialize the serializable listeners.
-     *
      */
-
     private void writeObject(ObjectOutputStream s) throws IOException {
-        s.defaultWriteObject();
-
-	java.util.Vector v = null;
-	synchronized (this) {
-	    if (listeners != null) {
-	        v = (java.util.Vector) listeners.clone();
+        Hashtable<String, VetoableChangeSupport> children = null;
+        VetoableChangeListener[] listeners = null;
+        synchronized (this.map) {
+            for (Entry<String, VetoableChangeListener[]> entry : this.map.getEntries()) {
+                String property = entry.getKey();
+                if (property == null) {
+                    listeners = entry.getValue();
+                } else {
+                    if (children == null) {
+                        children = new Hashtable<String, VetoableChangeSupport>();
+                    }
+                    VetoableChangeSupport vcs = new VetoableChangeSupport(this.source);
+                    vcs.map.set(null, entry.getValue());
+                    children.put(property, vcs);
+                }
             }
 	}
+        ObjectOutputStream.PutField fields = s.putFields();
+        fields.put("children", children);
+        fields.put("source", this.source);
+        fields.put("vetoableChangeSupportSerializedDataVersion", 2);
+        s.writeFields();
 
-	if (v != null) {
-	    for(int i = 0; i < v.size(); i++) {
-	        VetoableChangeListener l = (VetoableChangeListener)v.elementAt(i);
+        if (listeners != null) {
+            for (VetoableChangeListener l : listeners) {
 	        if (l instanceof Serializable) {
 	            s.writeObject(l);
 	        }
@@ -426,45 +358,82 @@ public class VetoableChangeSupport implements java.io.Serializable {
         s.writeObject(null);
     }
 
-
     private void readObject(ObjectInputStream s) throws ClassNotFoundException, IOException {
-        s.defaultReadObject();
+        this.map = new VetoableChangeListenerMap();
+
+        ObjectInputStream.GetField fields = s.readFields();
+
+        Hashtable<String, VetoableChangeSupport> children = (Hashtable<String, VetoableChangeSupport>) fields.get("children", null);
+        this.source = fields.get("source", null);
+        fields.get("vetoableChangeSupportSerializedDataVersion", 2);
       
         Object listenerOrNull;
-        while(null != (listenerOrNull = s.readObject())) {
-	    addVetoableChangeListener((VetoableChangeListener)listenerOrNull);
+        while (null != (listenerOrNull = s.readObject())) {
+            this.map.add(null, (VetoableChangeListener)listenerOrNull);
+        }
+        if (children != null) {
+            for (Entry<String, VetoableChangeSupport> entry : children.entrySet()) {
+                for (VetoableChangeListener listener : entry.getValue().getVetoableChangeListeners()) {
+                    this.map.add(entry.getKey(), listener);
+                }
+            }
         }
     }
 
     /**
-     * "listeners" lists all the generic listeners.
-     *
-     *  This is transient - its state is written in the writeObject method.
-     */
-    transient private java.util.Vector listeners;
-
-    /** 
-     * Hashtable for managing listeners for specific properties.
-     * Maps property names to VetoableChangeSupport objects.
-     * @serial 
-     * @since 1.2
-     */
-    private java.util.Hashtable children;
-
-    /** 
      * The object to be provided as the "source" for any generated events.
-     * @serial
      */
     private Object source;
 
-    /**
-     * Internal version number
-     * @serial
+    /** 
+     * @serialField children                                   Hashtable
+     * @serialField source                                     Object
+     * @serialField propertyChangeSupportSerializedDataVersion int
      */
-    private int vetoableChangeSupportSerializedDataVersion = 2;
+    private static final ObjectStreamField[] serialPersistentFields = {
+            new ObjectStreamField("children", Hashtable.class),
+            new ObjectStreamField("source", Object.class),
+            new ObjectStreamField("vetoableChangeSupportSerializedDataVersion", Integer.TYPE)
+    };
 
     /**
      * Serialization version ID, so we're compatible with JDK 1.1
      */
     static final long serialVersionUID = -5090210921595982017L;
+
+    /** 
+     * This is a {@link ChangeListenerMap ChangeListenerMap} implementation
+     * that works with {@link VetoableChangeListener VetoableChangeListener} objects.
+     */
+    private static final class VetoableChangeListenerMap extends ChangeListenerMap<VetoableChangeListener> {
+        private static final VetoableChangeListener[] EMPTY = {};
+
+    /**
+         * Creates an array of {@link VetoableChangeListener VetoableChangeListener} objects.
+         * This method uses the same instance of the empty array
+         * when {@code length} equals {@code 0}.
+         *
+         * @param length  the array length
+         * @return        an array with specified length
+     */
+        @Override
+        protected VetoableChangeListener[] newArray(int length) {
+            return (0 < length)
+                    ? new VetoableChangeListener[length]
+                    : EMPTY;
+        }
+
+    /**
+         * Creates a {@link VetoableChangeListenerProxy VetoableChangeListenerProxy}
+         * object for the specified property.
+         *
+         * @param name      the name of the property to listen on
+         * @param listener  the listener to process events
+         * @return          a {@code VetoableChangeListenerProxy} object
+     */
+        @Override
+        protected VetoableChangeListener newProxy(String name, VetoableChangeListener listener) {
+            return new VetoableChangeListenerProxy(name, listener);
+        }
+    }
 }
